# changed_targets

./: BUILD.bazel  deps.bzl  go.mod  go.sum
pkg1/: BUILD.bazel  main.go
pkg2/: BUILD.bazel  main.go
